--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         <!--基本信息-->
         <div style="position: absolute; top: 80px;left:200px; z-index: 0;">
-            <span style="font-size: 20px; font-weight: bold">沈杨杨</span>
+            <span style="font-size: 20px; font-weight: bold">SHEN Yangyang</span>
             <br>
             <span style="overflow: hidden;text-overflow:ellipsis;white-space:nowrap">南京航空航天大学硕士 | 巴黎达芬奇高等工程师学院</span>
             <br>
@@ -523,7 +523,7 @@
 </div>
 <footer>
     <br>
-    <div style="text-align: center;"><b style="font-size:medium">&copy; 2023 Copyright 沈杨杨</b></div>
+    <div style="text-align: center;"><b style="font-size:medium">&copy; 2023 Copyright SHENYY</b></div>
     <br>
 </footer>
 
